# grundrisse

./: .env.example  .gitignore  CLAUDE.md  METADATA_COMPLETION_MASTER_PLAN.md  README.md  docker-compose.yml  main_plan.txt  pyproject.toml  revision.txt
api/: Dockerfile  README.md  pyproject.toml
api/src/api/: __init__.py  config.py  deps.py  main.py
api/src/api/routes/: authors.py  paragraphs.py  search.py  stats.py  works.py
data/: all_authors_alphabetical.txt  author_mappings_comprehensive.yaml  author_mappings_manual.yaml
data/raw/: ingest_run_2c56c52e-16ae-4c8b-a85e-bd62db534ee4.json  ingest_run_742671da-362b-408e-b90e-c01cb48a1d66.json  (+5 more)
docs/: ARGUMENT_EXTRACTION_PLAN.md  ARGUMENT_EXTRACTION_SETUP.md  AUTHOR_NAMING_CONVENTION.md  AUTONOMOUS_DIALECTICAL_TREE_EXTRACTION.md  CRAWLER_BLUEPRINT.md  CRAWLER_IMPLEMENTATION.md  DEVELOPMENT.md  FRONTEND_PLAN.md  MASTER_PLAN.md  METADATA_PIPELINE.md  MONITORING.md  PROGRESSIVE_CLASSIFICATION.md  ROADMAP.md  VALIDATION.md  WORK_DATES.md
docs/archive/: DATE_VERIFICATION_REPORT.md  (+3 more)
examples/: README.md  extract_concepts_and_arguments.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  next.config.js  package.json  tailwind.config.js
ops/: docker-compose.yml
pipelines/argument_pipeline/: pyproject.toml
pipelines/argument_pipeline/src/argument_pipeline/: __init__.py  cli.py  settings.py
pipelines/argument_pipeline/src/argument_pipeline/llm/: __init__.py  extractor.py
pipelines/argument_pipeline/src/argument_pipeline/retrieval/: __init__.py
pipelines/argument_pipeline/src/argument_pipeline/stages/: __init__.py  orchestrator.py
pipelines/argument_pipeline/src/argument_pipeline/validation/: __init__.py  validators.py
pipelines/nlp_pipeline/: pyproject.toml
pipelines/nlp_pipeline/src/nlp_pipeline/: cli.py  settings.py
pipelines/nlp_pipeline/src/nlp_pipeline/llm/: __init__.py  client.py  zai_glm.py
pipelines/nlp_pipeline/src/nlp_pipeline/stage_a/: __init__.py  context.py  prompts.py  run.py  tasks.py
pipelines/nlp_pipeline/src/nlp_pipeline/stage_b/: prompts.py  run.py
scripts/: analyze_remaining_unknown.py  check_status.py  comprehensive_date_check.py  final_unknown_summary.py  fix_wrong_dates.py  master_metadata_completion.py  phase3b_html_parsing_recovery.py  phase3c_canonical_dates.py  phase3d_aggressive_parsing.py  sample_unknown_works.py
services/ingest_service/: pyproject.toml
services/ingest_service/src/ingest_service/: cli.py  settings.py
services/ingest_service/src/ingest_service/author_dedup/: __init__.py  clustering.py  llm_dedup.py
services/ingest_service/src/ingest_service/crawl/: __init__.py  catalog.py  discover.py  http_client.py  link_graph.py  marxists_org.py  progressive_classifier.py
services/ingest_service/src/ingest_service/fetch/: __init__.py  snapshot.py
services/ingest_service/src/ingest_service/metadata/: __init__.py  author_lifespan_resolver.py  http_cached.py  publication_date_resolver.py  work_date_deriver.py
services/ingest_service/src/ingest_service/parse/: __init__.py  html_to_blocks.py  marxists_header_metadata.py
services/ingest_service/src/ingest_service/segment/: __init__.py  sentences.py
services/ingest_service/src/ingest_service/utils/: title_canonicalization.py  url_canonicalization.py
(+52 files in other folders)
