[project]
name = "grundrisse"
version = "0.1.0"
description = "A provenance-first pipeline for concept, claim, and dialectical analysis of Marxist theoretical corpora."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

