[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grundrisse-argument-pipeline"
version = "0.1.0"
description = "Argument extraction and dialectical motion pipeline"
requires-python = ">=3.11"
dependencies = [
  "grundrisse-core",
  "grundrisse-argument-extraction",
  "grundrisse-llm-contracts",
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic-settings>=2.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
grundrisse-argument = "argument_pipeline.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
