[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grundrisse-nlp-pipeline"
version = "0.1.0"
description = "Extraction pipeline: mentions, claims, canonicalization, linking."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "grundrisse-core",
  "grundrisse-llm-contracts",
  "httpx>=0.27",
  "pydantic-settings>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[project.scripts]
grundrisse-nlp = "nlp_pipeline.cli:app"
